src/objects/pse__Project_Task__c.object
<CustomObject>
    <customHelpPage>pse__ProjectTaskHelp</customHelpPage>
    <description>Represents a unit or collection of work associated with a project, often tracked for completion with points and for effort with hours. You can associate one or more resources or roles with a project task through corresponding child project task assignments. If configured, resources can enter the number of hours that they have spent on a particular task on the Timecard Entry page, accessed from the Log a Timecard with Task Time link or button. Resources can log Timecards against one or multiple tasks.</description>
    <fields>
        <fullName>AECOMTaxOverride__c</fullName>
        <label>AECOM Tax Override</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOMWorkSiteCity__c</fullName>
        <label>AECOM Work Site City</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AECOMWorkSiteStateCountry__c</fullName>
        <label>AECOM Work Site State/Country</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AllowCrossCharge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Cross Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute10__c</fullName>
        <label>Attribute10</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute1__c</fullName>
        <label>Attribute1</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute2__c</fullName>
        <label>Attribute2</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bill To</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>ProjectTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Burden_Reference_Schedule_Name__c</fullName>
        <label>Burden Reference Schedule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CarryingOutOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization String</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OrganizationString__c.isActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OrganizationString__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeManagerApprovedForSynch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Manager Approved For Synch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <formula>OR(AND(OracleLastSyncDateTime__c &lt; LastModifiedDate, NOT(ChangeManagerApprovedForSynch__c)), AND(ISNULL(OracleLastSyncDateTime__c), NOT(ChangeManagerApprovedForSynch__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ChangeManagerIsChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClonedSourceId__c</fullName>
        <description>Salesforce Id of task that this task was cloned from. Used with Project Cloning feature.</description>
        <externalId>true</externalId>
        <label>Cloned Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostIndRateSCHID__c</fullName>
        <label>Cost Ind Rate Sch ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>TEXT(pse__End_Date__c-pse__Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EarnedValueCurve__c</fullName>
        <label>Earned Value Curve</label>
        <picklist>
            <picklistValues>
                <fullName>Back Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bell Shaped</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Even</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Front Loaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S Curve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EndDateBeforeChange__c</fullName>
        <label>End Date (Before Change)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialTask__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked if this project task is a financial task. Unchecked means the task represents a non-financial task.</description>
        <inlineHelpText>This box should be checked if this project task is a financial task. Unchecked means the task represents a non-financial task.</inlineHelpText>
        <label>Financial Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForecastEndDate__c</fullName>
        <label>Forecast End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForecastStartDate__c</fullName>
        <label>Forecast Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsBillable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsChargeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Chargeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LongProjTaskName__c</fullName>
        <label>Long Task Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Expenditure_Date__c</fullName>
        <label>Max Expenditure Date</label>
        <summarizedField>ExpendItem__c.ExpenditureItemDate__c</summarizedField>
        <summaryForeignKey>ExpendItem__c.ProjectTask__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OracleCustomerId__c</fullName>
        <formula>pse__Project__r.OracleCustomerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleLastSyncDateTime__c</fullName>
        <description>timestamp of when last successful sync took place</description>
        <label>Oracle Last Sync DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OracleProjectTaskId__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Project Task Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleProjectTaskUniqueName__c</fullName>
        <description>This field is set via workflow. Project Task Auto-Number + ProjectTaskName</description>
        <inlineHelpText>This field is set via workflow. Project Task Auto-Number + ProjectTaskName</inlineHelpText>
        <label>Oracle Project Task Unique Name</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending
T = Transfer (Success)
E = Error
S = Successful</description>
        <inlineHelpText>P = Pending
T = Transfer (Success)
E = Error
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <formula>pse__Project__r.OrgId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Task_Reference__c</fullName>
        <label>PM Task Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <description>Oracle Project Number</description>
        <formula>pse__Project__r.OracleProjectnumber__c</formula>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTaskNumber__c</fullName>
        <label>Project Task Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectTaskOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectTaskUniqueName__c</fullName>
        <externalId>true</externalId>
        <label>ProjectTaskUniqueName</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PurchaseOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>POHeader__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Project Tasks (Ship To)</relationshipLabel>
        <relationshipName>ProjectTasksShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDateBeforeChange__c</fullName>
        <label>Start Date (Before Change)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaskOrg__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TaskOrg</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Only Active Orgs are displayed</errorMessage>
            <filterItems>
                <field>ProjectOrganization__c.OrgIsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only Active Orgs are displayed</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectOrganization__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>ProjectTasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxReceivingTask__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax Receiving Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TopTaskOwningCustomerOracleId__c</fullName>
        <formula>IF( 
ISBLANK(TopTaskOwningCustomer__r.Site__r.Account__r.OracleCustomerID__c) ,  
OracleCustomerId__c , 
TopTaskOwningCustomer__r.Site__r.Account__r.OracleCustomerID__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Task Owning Customer Oracle Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TopTaskOwningCustomer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Top Task Owning Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Site__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Project Tasks (Top Task Owning Customer)</relationshipLabel>
        <relationshipName>ProjectTopTasksOwningCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalActualCost__c</fullName>
        <label>Total Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalApprovedCost__c</fullName>
        <label>Total Approved Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalFunding__c</fullName>
        <label>Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalProjectFunctionalBurdenedCost__c</fullName>
        <label>Total Project Functional Burdened Cost</label>
        <summarizedField>ExpendItem__c.ProjectFunctionalBurdenedCost__c</summarizedField>
        <summaryForeignKey>ExpendItem__c.ProjectTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalProjectFunctionalRawCost__c</fullName>
        <label>Total Project Functional Raw Cost</label>
        <summarizedField>ExpendItem__c.ProjectFunctionalRawCost__c</summarizedField>
        <summaryForeignKey>ExpendItem__c.ProjectTask__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>WorkTypeName__c</fullName>
        <label>Work Type Name</label>
        <picklist>
            <picklistValues>
                <fullName>Home Office</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Field Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Actual_End_Date_Time__c</fullName>
        <inlineHelpText>Date &amp; time of when the task actually ended. When the completed check box was checked</inlineHelpText>
        <label>Actual End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actual_End_Date__c</fullName>
        <formula>DATEVALUE( pse__Actual_End_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date of when the task actually ended. When the completed check box was checked</inlineHelpText>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Hours__c</fullName>
        <inlineHelpText>Hours spent on this task. Rolls up from task time entries on timecards. On parent tasks includes hours from child tasks.</inlineHelpText>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Start_Date_Time__c</fullName>
        <inlineHelpText>Date of when the task actually started. When the started check box was checked</inlineHelpText>
        <label>Actual Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Actual_Start_Date__c</fullName>
        <formula>DATEVALUE( pse__Actual_Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Date of when the task actually started. When the started check box was checked</inlineHelpText>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Resources_Long__c</fullName>
        <label>Assigned Resources (Long)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Assigned_Resources__c</fullName>
        <inlineHelpText>System generated list of assigned resources. The list is generated from Project Task Assignment.</inlineHelpText>
        <label>Assigned Resources</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Closed_for_Time_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, the task selector on the Time Entry page does not allow adding new task time against this project task.</inlineHelpText>
        <label>Closed for Time Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked if the task has been completed</description>
        <inlineHelpText>Will be checked if the task has been completed</inlineHelpText>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__Do_Not_Auto_Update_Parents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Auto Update Parents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Do_Not_Auto_Update_This_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether to bypass automatic updates of auto-calculated fields like dates, % complete, etc</inlineHelpText>
        <label>Do Not Auto Update This Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__End_Date_Time__c</fullName>
        <description>The date &amp; time on which work for this Task is supposed to end.  Timecards may still be entered for a Task after this date as long as it is not closed for time entry.</description>
        <inlineHelpText>The date &amp; time on which work for this Task is supposed to end.  Timecards may still be entered for a Task after this date as long as it is not closed for time entry.</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <formula>DATEVALUE(pse__End_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__External_Task_ID__c</fullName>
        <description>External Task ID for integration with non-Salesforce task management systems or applications.  Integrations should use this field for the external system ID to maintain integrity and allow upserts.</description>
        <externalId>true</externalId>
        <inlineHelpText>External Task ID for integration with non-Salesforce task management systems or applications.  Integrations should use this field for the external system ID to maintain integrity and allow upserts.</inlineHelpText>
        <label>External Task ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Hierarchy_Depth__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System field showing the number of Parent Tasks &apos;up the chain&apos; to the Top-level Parent Task.  Top-level Tasks themselves have a Hierarchy Depth of 0, their immediate child Tasks have a Hierarchy Depth of 1, and so on.</description>
        <inlineHelpText>System field showing the number of Parent Tasks &apos;up the chain&apos; to the Top-level Parent Task.  Top-level Tasks themselves have a Hierarchy Depth of 0, their immediate child Tasks have a Hierarchy Depth of 1, and so on.</inlineHelpText>
        <label>Hierarchy Depth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hours_Remaining__c</fullName>
        <formula>IF(
	 pse__Estimated_Hours__c -  pse__Actual_Hours__c  &lt; 0,
	 0, /* Never allow this field to go below 0 */
	 pse__Estimated_Hours__c - pse__Actual_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The estimated number of hours remaining to complete this task. Derived from estimated hours and actual hours.</inlineHelpText>
        <label>Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project Milestone that covers this Task.</description>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>pse__Milestone__c.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.pse__Project__c</valueField>
            </filterItems>
            <infoMessage>Only milestones for the same project are shown. To display all milestones, click Show all results.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Number_of_Assignments__c</fullName>
        <description>Roll-up summary field totaling the number of Project Task Assignments</description>
        <inlineHelpText>Roll-up summary field totaling the number of Project Task Assignments</inlineHelpText>
        <label>Number of Assignments</label>
        <summaryForeignKey>pse__Project_Task_Assignment__c.pse__Project_Task__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>pse__Order__c</fullName>
        <label>Peer Order</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_End_Date_Time__c</fullName>
        <formula>pse__Parent_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_End_Date__c</fullName>
        <description>End date of the current Project Task&apos;s Parent Task</description>
        <formula>pse__Parent_Task__r.pse__End_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_Start_Date_Time__c</fullName>
        <formula>pse__Parent_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task_Start_Date__c</fullName>
        <description>Formula for the start date of the current Project Task&apos;s Parent Task</description>
        <formula>pse__Parent_Task__r.pse__Start_Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Task Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Parent_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup captures Task hierarchies:  sub-Tasks have a Parent Task lookup value for the next higher-level Task in the Task hierarchy.  Note that this is separate and distinct from temporal (dependent/predecessor) relationships between Tasks.</description>
        <inlineHelpText>This lookup captures Task hierarchies:  sub-Tasks have a Parent Task lookup value for the next higher-level Task in the Task hierarchy.  Note that this is separate and distinct from temporal (dependent/predecessor) relationships between Tasks.</inlineHelpText>
        <label>Parent Task</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Project Tasks (Child Task)</relationshipLabel>
        <relationshipName>Immediate_Sub_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Hours__c</fullName>
        <formula>IF(
	pse__Estimated_Hours__c = 0, 
	0, /* 0% on no estimate to match behavior of points */
	pse__Actual_Hours__c / pse__Estimated_Hours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Points__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Complete (Points)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Percent_Complete_Tasks__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percent Complete (Tasks)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Points_Baseline__c</fullName>
        <label>Points Baseline</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Points_Complete__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of points completed</inlineHelpText>
        <label>Points Complete</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Points_Remaining__c</fullName>
        <formula>pse__Points__c - pse__Points_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Points__c</fullName>
        <label>Points</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Priority__c</fullName>
        <description>Pick list that may be customized to reflect possible priority levels that can be associated with Project Tasks.</description>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project that the Task is a part of.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Tasks</relationshipLabel>
        <relationshipName>Project_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date_Time__c</fullName>
        <description>The date &amp; time on which work for this Task is supposed to start.  Timecards may still be entered for a Task before this date as long as it is not closed for time entry.</description>
        <inlineHelpText>The date &amp; time on which work for this Task is supposed to start.  Timecards may still be entered for a Task before this date as long as it is not closed for time entry.</inlineHelpText>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <formula>DATEVALUE(pse__Start_Date_Time__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Started__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will be checked if the task has been started</description>
        <inlineHelpText>Will be checked if the task has been started</inlineHelpText>
        <label>Started</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>Pick list for Project Task status that may be customized as needed for possible Task status values</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pse__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated if this is a task that has children. If summary task values and time should be rolled up from sub tasks. Values should not be entered directly for this task</description>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_ID_Chain__c</fullName>
        <description>System field showing the delimited list of Parent Task IDs &apos;up the chain&apos; to the Top-level Parent Task.  Top-level Parent Tasks will have a Task ID Chain value equal to their own ID.  Their immediate child Tasks will have a Task ID Chain value equal to their own ID, then the ID of their Parent Task, and so on.</description>
        <inlineHelpText>System field showing the delimited list of Parent Task IDs &apos;up the chain&apos; to the Top-level Parent Task.</inlineHelpText>
        <label>Task ID Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Task_Key_Chain__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Task Key Chain</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Task_Key__c</fullName>
        <description>Internal alternative id. Not intended for display</description>
        <externalId>true</externalId>
        <label>Task Key</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pse__Task_Name_Chain_Long__c</fullName>
        <description>This is a new field to hold task name chain. This field has same behavior as the &quot;Task Name Chain&quot; field. But the new data type (long text area) will allow name chain for larger number for project tasks in a hierarchy as compare to the old one (255 chars)</description>
        <inlineHelpText>This is a new field to hold task name chain. This field has same behavior as the &quot;Task Name Chain&quot; field. But the new data type (long text area) will allow name chain for larger number for project tasks in a hierarchy as compare to the old one (255 chars)</inlineHelpText>
        <label>Task Name Chain (Long)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>